--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Javascript Sandbox: Section 2</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <title>Task List</title>
 </head>
-<body>
-    <h1>JavaScript Sandbox: Section 2</h1>
 
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <div id="main" class="card">
+                    <div class="card-content">
+                        <span class="card-title">Task List</span>
+                        <div class="row">
+                            <form id="task-form">
+                                <div class="input-field col s12">
+                                    <input type="text" name="task" id="task" value="Walk the dog">
+                                    <label for="task">New Task</label>
+                                </div>
+                        </div>
+                        <input type="submit" value="Add Task" class="btn">
+                        </form>
+                    </div>
+                    <div class="card-action">
+                        <h5 id="task-title">Tasks</h5>
+                        <ul class="collection">
+                            <li class="collection-item">
+                                List Item
+                                <a href="#" class="delete-item secondary-content">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                List Item
+                                <a href="#" class="delete-item secondary-content">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                List Item
+                                <a href="#" class="delete-item secondary-content">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                List Item
+                                <a href="#" class="delete-item secondary-content">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </li>
+                            <li class="collection-item">
+                                List Item
+                                <a href="#" class="delete-item secondary-content">
+                                    <i class="fas fa-plus"></i>
+                                </a>
+                            </li>
+                        </ul>
+                        <a class="clear-tasks btn black" href="">Clear Tasks</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.0.js"
+        integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
