--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
                             <li class="collection-item">
                                 List Item
                                 <a href="#" class="delete-item secondary-content">
-                                    <i class="fas fa-plus"></i>
+                                    <i class="fas fa-times"></i>
                                 </a>
                             </li>
                             <li class="collection-item">
                                 List Item
                                 <a href="#" class="delete-item secondary-content">
-                                    <i class="fas fa-plus"></i>
+                                    <i class="fas fa-times"></i>
                                 </a>
                             </li>
                             <li class="collection-item">
                                 List Item
                                 <a href="#" class="delete-item secondary-content">
-                                    <i class="fas fa-plus"></i>
+                                    <i class="fas fa-times"></i>
                                 </a>
                             </li>
                             <li class="collection-item">
                                 List Item
                                 <a href="#" class="delete-item secondary-content">
-                                    <i class="fas fa-plus"></i>
+                                    <i class="fas fa-times"></i>
                                 </a>
                             </li>
                             <li class="collection-item">
                                 List Item
                                 <a href="#" class="delete-item secondary-content">
-                                    <i class="fas fa-plus"></i>
+                                    <i class="fas fa-times"></i>
                                 </a>
                             </li>
                         </ul>
